More JS & even more CSS changes

--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       <div class="main-body">
         <div class="about-me">
           <div class="about-text">
-            <h1 class="name">MITCH HANSEN</h1>
-            <h3 class="degree">Computer Science Undergraduate</h3>
-            <h4 class="school">Santa Clara University</h4>
+            <h1 id="intro"></h1>
           </div>
+          <!--<span class="about-text" id="typed"></span>-->
           <a id="about-sec"> </a>
         </div>
 
@@ -119,6 +118,8 @@
       </div>
 
       <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/typeit@5.10.6/dist/typeit.min.js"> </script>
+      <script type="text/javascript" src="js/type.js"></script>
       <script type="text/javascript" src="js/menu.js"></script>
       <script type="text/javascript" src="js/script.js"></script>
 
