More Styling and Responsiveness

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="main-body">
         <div class="about-me">
           <div class="about-text">
-            <h1 id="intro"></h1>
+            <h1 id="intro">Mitch Hansen</br> Computer Science Undergraduate</br> Santa Clara University</h1>
           </div>
           <!--<span class="about-text" id="typed"></span>-->
           <a id="about-sec"> </a>
