--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="title">skills@mitch-hansen.com:~</div>
             </div>
-            <pre class="body"></br>skills@mitch-hansen.com:~$ g++ -std=c++11 skills.cpp</br></br>~$ Through school and developing my skills on my own time</br>~$ I hope to eventually become a computer master </br></br>~$ I know various languages:</br>    ~$ C++</br>    ~$ Java</br>    ~$ HTML</br>    ~$ CSS</br>    ~$ some JavaScript</br>    ~$ And some C#</br></br>~$ I also know various techniques and tools:</br>    ~$ Object Oriented Programming</br>    ~$ Data Structures and Algorithms</br>    ~$ Visual Studio</br>    ~$ Git</br>    ~$ Atom</br>    ~$ G++ Compiler</br></br>~$ Interests:</br>    ~$ ["Water Polo", "Swimming", "Lacrosse", "Gaming", "Travel"]</br></br>~$ Resume: </br>    ~$ <a href="./pdf/Hansen Mitchell Resume Color.pdf" target="blank_">Hansen Mitchell Resume.pdf</a></br>
+            <pre class="body"></br>skills@mitch-hansen.com:~$ g++ -std=c++11 skills.cpp</br></br>~$ Through school and developing my skills on my own time</br>~$ I hope to eventually become a computer master </br></br>~$ I know various languages:</br>    ~$ C++</br>    ~$ Java</br>    ~$ HTML</br>    ~$ CSS</br>    ~$ some JavaScript</br>    ~$ And some C#</br></br>~$ I also know various techniques and tools:</br>    ~$ Object Oriented Programming</br>    ~$ Data Structures and Algorithms</br>    ~$ Visual Studio</br>    ~$ Git</br>    ~$ Atom</br>    ~$ G++ Compiler</br></br>~$ Interests:</br>    ~$ ["Water Polo", "Swimming", "Lacrosse", "Gaming", "Travel", "D&D"]</br></br>~$ Resume: </br>    ~$ <a href="./pdf/Hansen Mitchell Resume Color.pdf" target="blank_">Hansen Mitchell Resume.pdf</a></br>
             </pre>
           </div>
         </div>
