--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="wrapper">
       <nav>
         <div class="logo"><a href="#"><h1>MITCH HANSEN</h1></a></div>
-        <a class="burger-nav"> </a>
-        <ul>
+        <a class="burger-nav"></a>
+        <ul class="ul-items">
           <li><a href="#about-sec">About</a></li>
           <li><a href="#prog">Programming</a></li>
           <li><a href="#project-section">Projects</a></li>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="contact">
-          <a href="#contact" id="contact-header"><h1>CONTACT</h1></a>
+          <!--<a href="#contact" id="contact-header">--><h1 id="contact-header">CONTACT</h1><!--</a>-->
           <a href="https://www.linkedin.com/in/mitchahan/" rel="noopener noreferrer" target="_blank" class="fa fa-linkedin"></a>
           <a href="https://github.com/mitchahan" rel="noopener noreferrer" target="_blank" class="fa fa-github"></a>
           <a href="https://www.facebook.com/mitchames99" rel="noopener noreferrer" target="_blank" class="fa fa-facebook"></a>
