--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </div>
 
             <div class="column">
-              <h2>Student to Business Web Application Database</h2>
-              <p class="para-prog">This project is a website that holds a database of businesses and their employees with their business emails and job title. Students with .edu email addresses would then sign up on the website and be able to search for business professionals then connecting with them. The .edu domain would extremely limit the amount of spam and bot users trying to harvest emails from our site, this is because the .edu domain is handled solely by Educase, and states that “Only US postsecondary institutions institutionally accredited by one of the agencies on the U.S. Department of Education's list of Nationally Recognized Accrediting Agencies may apply for new names in the .edu domain. These include both "Regional Institutional Accrediting Agencies" and "National Institutional and Specialized Accrediting Bodies" recognized by the U.S. Department of Education”, allowing the website to be more credible and enticing for businesses to use, theoretically. It's Currently in development by me and one of my good friends <a href="https://github.com/bdreyerr/" target="blank_">Ben Dreyer</a>.</p>
-              <p class="para-prog"> <a href="http://bizstalker.azurewebsites.net/" target="blank_">Visit Our Website</a></p>
+              <h2>6 Degrees of Seperation Application</h2>
+              <p class="para-prog">This project is an application utilizing Python, C++, and the Instagram API to test the theory that everyone is connected by no more than 6 degrees of seperation. We are utilizing a web scraper and the Instagram API to get a user, a target account and then go through their followers to determine if that user and the target are connected. We acheive this by utilizing a dual Breadth First Search algorithm to count the number of connections and and connect the two accounts. We are currently in the process of developing this technology.</p>
+              <p class="para-prog"> <a href="https://github.com/SixDegreeApp/sixDegree" target="blank_">Github Repo</a></p>
             </div>
 
             <div class="column">
