General Face Lift

--- a/index.html
+++ b/index.html
@@ -45,15 +45,18 @@
       <div class="main-body">
         <div class="about-me">
           <div class="about-text">
-            <h1 id="intro">Mitch Hansen</br> Computer Science Undergraduate</br> Santa Clara University</h1>
+            <h1 id="intro">Mitch Hansen</br> Computer Science Student</br> Santa Clara University</h1>
           </div>
-          <!--<span class="about-text" id="typed"></span>-->
+
+
+
           <a id="about-sec"> </a>
         </div>
 
         <div class="about">
           <div class="profile-pic"> <img src="img/profile-pic.jpeg"> </div>
-          <div class="profile-desc"> <p class="para1">Welcome to my website. I am a Seattle native, currently attending Santa Clara University in the Silicon Valley as a rising sophomore and computer science undergraduate. Over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! I fell in love with computer science and just couldn’t get enough, so I am always looking for a new project to dive into or a new concept to explore.</p> </div>
+          <div class="profile-desc"> <p class="para1">Welcome to my website. I am a Seattle native, currently studying at Santa Clara University in the Silicon Valley as a rising sophomore and computer science student. I am an incoming Software Engineering Intern at Nordstrom and over the past couple years, I have gained an extensive knowledge of C++ and Java, Object-Oriented Programming and Data Structures, as well as developed numerous related projects, just like this website! Technology has always been a passion in my life, and it has shaped my personality. Programming and creating allows me to further that interest.</p>
+          </div>
         </div>
 
         <div id="prog" class="programming-skills">
@@ -80,27 +83,34 @@
           <div class="row">
             <div class="column">
               <h2>C# RogueLike Game</h2>
-              <p class="para-prog"> One day I got bored and thought, "hey, what could I do to improve my skills, yet at the same time have a ton of fun. I'm kinda blownout from all the data-structures." So I looked up some cool projects and came across some tutorials and one of the happened to be making a C# Rougelike game. It was fun, I got to learn C# a little better and create a little fun game in between doing Calculus and learning about Roman architecture. Why did so many emporers burn Rome to the ground?</p>
+              <p class="para-prog"> One day I got bored and thought to myself, "hey, I suck at art, but also love video games and programming. Why don't I learn some Visual Studios and C#?" Totally normal thoughts. So I looked up some cool projects and came across some tutorials and one of the happened to be making a C# Rougelike game. It was fun, I got to learn C# a little better and create a fun game in between doing Calculus and learning about Roman architecture.</p>
               <p class="para-prog"> <a href="https://github.com/mitchahan/Roguelike-Game-CSharp" rel="noopener noreferrer" target="_blank">GitHub Repo</a> | <a href="https://roguesharp.wordpress.com/" rel="noopener noreferrer" target="_blank">RogueSharp Tutorial</a></p>
             </div>
 
+            <div class="linebreak"></div>
+
             <div class="column">
               <h2>Pantry Location App Proof of Concept</h2>
-              <p class="para-prog"> So for my first Hackathon ever, a group of 5 others and myself created a "prototype" for a pantry/disaster relief location application utilizint the Google Map's API, Android Studio, and Git. It was extremly fun, I still hang with all the guys in my group to this day after meeting them there for the first time. Anyways, we programmed the entire thing in C++ cause we all knew it, but then found out the Maps API doesn't support C++... nice. So I had to go through all our old backend code and reprogram it into Java, because I was the only one who knew it enough. It put us back like 6 hours, but we at least got a prototype up and used dummy locations and data. 10/10 would recommend losing an entire weekends worth of sleep to code for 24 hours straight again.</p>
+              <p class="para-prog"> For my first Hackathon, a group of 5 others and myself created a prototype for a pantry/disaster relief location application utilizint the Google Map's API, Android Studio, and Git. It was extremly fun, I still hang with all the guys in my group to this day after meeting them there for the first time. Anyways, we programmed the entire thing in C++ cause we all knew it, but then found out the Maps API doesn't support C++... nice. So I had to go through all our old backend code and reprogram it into Java, because I was one of two who knew it enough to rewrite it. It put us back like 6 hours, but we at least got a prototype up using dummy locations and data. 10/10 would recommend losing an entire weekends worth of sleep to code for 24 hours straight again.</p>
               <p class="para-prog"> <a href="https://github.com/mitchahan/Hackathon" rel="noopener noreferrer" target="_blank">GitHub Repo</a> | <a href="http://hackforhumanity.io/" rel="noopener noreferrer" target="_blank">Hack For Humanity</a></p>
             </div>
 
+            <div class="linebreak"></div>
+
             <div class="column">
               <h2>6 Degrees of Seperation Application</h2>
-              <p class="para-prog">This project is an application utilizing Python, C++, and the Instagram API to test the theory that everyone is connected by no more than 6 degrees of seperation. We are utilizing a web scraper and the Instagram API to get a user, a target account and then go through their followers to determine if that user and the target are connected. We acheive this by utilizing a dual Breadth First Search algorithm to count the number of connections and and connect the two accounts. We are currently in the process of developing this technology.</p>
+              <p class="para-prog">This project is an application utilizing Python, C++, Java, and the Instagram API to test the theory that everyone is connected by no more than 6 degrees of seperation. A friend and I are utilizing a web scraper and the Instagram API to get a user, a target account and then go through their followers to determine if that user and the target are connected. We acheive this by utilizing a dual Breadth First Search algorithm to count the number of connections and and connect the two accounts. We are currently in the process of developing this technology.</p>
               <p class="para-prog"> <a href="https://github.com/SixDegreeApp/sixDegree" target="blank_">Github Repo</a></p>
             </div>
 
+            <div class="linebreak"></div>
+
             <div class="column">
-              <h2>This Very Website</h2>
-              <p class="para-prog">This website is a proof of some of my Computer Science skills, and let me tell you... I thought it was going to be a lot easier. Nope, I've scrapped design after design, hours upon hours of minute details being tweaked, and I still see issues. Writing the skeleton is easy, it was getting it to look nice and capturing a theme of who I was that was hard. Either way I'm proud of what I accomplished here, and learned a lot throughout the journey of creating my first initial website. Thanks for even taking the time to look at it :)</p>
+              <h2>This Website</h2>
+              <p class="para-prog">This website is a proof of some of my Computer Science skills, and let me tell you... I thought it was going to be a lot easier. Nope, I've scrapped design after design, hours upon hours of tiny details being tweaked, and I still see issues. Writing the skeleton is easy, it was getting it to look nice and capturing a theme of who I was that was hard. Either way I'm proud of what I accomplished here, and learned a lot throughout the journey of creating my first initial website. Thanks for even taking the time to look at it :)</p>
               <p class="para-prog"> <a href="https://github.com/mitchahan/Personal-Website" target="blank_">GitHub Repo</a></p>
             </div>
+
           </div>
         </div>
 
@@ -110,8 +120,8 @@
           <a href="https://github.com/mitchahan" rel="noopener noreferrer" target="_blank" class="fa fa-github"></a>
           <a href="https://www.facebook.com/mitchames99" rel="noopener noreferrer" target="_blank" class="fa fa-facebook"></a>
           <a href="https://twitter.com/mitch_ames" rel="noopener noreferrer" target="_blank" class="fa fa-twitter"></a>
-          <p class="contact-p">Email me for inquiries or other random stuff!<p>
-          <p class="contact-p">mitchames@live.com <p>
+          <p class="contact-p">Contact Me!<p>
+          <p class="contact-p">mitchames@live.com<p>
           <p class="contact-p">Grab a copy of my r&eacute;sum&eacute; here: <a href="./pdf/Hansen Mitchell Resume Color.pdf" target="blank_">R&eacute;sum&eacute;</a></p>
         </div>
 
